--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     git push -u origin main \
     -->
     <h1>Hello World!</h1>
-    <h2>This is my first website</h2>    
+    <h2>This is my first website</h2> 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Flag_of_Bangladesh.svg/1024px-Flag_of_Bangladesh.svg.png" alt="">   
 </body>
 </html>
